<resources>
    <string name="app_name">Uplabs</string>
    <string name="recent">Recent search</string>
    <string name="android">Android</string>
    <string name="web">Web</string>
    <string name="ios">iOS</string>
    <string name="motion">Motion</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="posts">Posts</string>
    <string name="profile">Profile</string>
    <string-array name="subcategories">
        <item>App</item>
        <item>Icon</item>
        <item>User interface</item>
        <item>Website</item>
        <item>Animation</item>
        <item>Landing page</item>
        <item>Marketing</item>
        <item>Template</item>
        <item>UI kit</item>
        <item>Mockup</item>
        <item>Experiment</item>
        <item>Icons</item>
        <item>Illustration</item>
        <item>Library</item>
        <item>Software</item>
    </string-array>
</resources>
